feat: 최근 검색어 조회 API
